[package]
name = "ethplorer"
version = "0.1.0"
authors = ["Alessandro Maclaine <almaclaine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
void = { version = "1.0.2" }
chrono = { version = "0.4", features = ["serde"] }
serde_with = "1.11.0"
num = "0.4.0"
